# gdtchron

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.binder/: apt.txt  environment.yml
.github/workflows/: aspect-docker.yml  lint-test.yml
aspect/: Dockerfile  aspect_docker.sh  environment.yml  run_aspect_model.ipynb  uplift_box.prm
docs/: api.rst  conf.py  index.rst
docs/_static/: custom.css
gdtchron/: __init__.py  _parallel_vtk.py  aft.py  he.py
notebooks/: tchron_demo.ipynb
tests/: test_aft.py  test_he.py  test_parallel_vtk.py  test_placeholder.py
