[tool.poetry]
name = "gdtchron"
version = "0.1.0"
description = "Thermochronology for geodynamic models"
authors = [
  "Dylan Vasey <dylan.vasey@tufts.edu>", "Peter Scully <peter.scully@tufts.edu>",
  "John Naliboff <john.naliboff@nmt.edu>"
]
license = "MIT"

packages = [{ include = "gdtchron" }]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21"
pandas = "^1.3"
tqdm = "*"
matplotlib = "*"
pyvista = "*"
scipy = "*"
joblib = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
ruff = "^0.11"

[tool.ruff]
lint.select = [
  "E", "F", "B", "I", "D", "N", "UP", "C4", "SIM", "T20"
]

lint.ignore = [
  "D100",  # Ignore missing docstring in public module
  "D107",  # Ignore missing docstring in __init__
  "D203",  # Ignore incorrect blank line before class
  "D213",  # Ignore multi line summary second line
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"